--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     <div class="container">
 
       <h1><a href="index.html" style="color:black">Navina Budhathoki</a></h1>
-      <h2 style="color:black">I'm a passionate <span> <b>Web Developer</b></span></h2>
+      <h2 style="color:black">Hello, I'm Navina Budhathoki, a passionate Laravel web developer 
+        dedicated to crafting seamless and scalable solutions for the digital landscape. 
+        With a keen eye for detail and a love for efficient, elegant code, 
+        I thrive on transforming complex ideas into user-friendly experiences. Welcome to my portfolio,
+         where innovation meets passion in the world of Laravel development. <span> <b>Web Developer</b></span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -266,42 +270,42 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>Golden Gate Institute</h4>
+            <p><em>6 months diploma course on adobe photoshop, microsoft word, microsoft excel, Design</em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
+              <li>Golden Gate Institute,Baglung, Nepal</li>
               <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>goldengatebgl@gmail.com</li>
             </ul>
             </p>
           </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+            <h4>Bachelor in Computer Application</h4>
+            <h5>2019 - 2024</h5>
+            <p><em>LA Grandee International College, Pokhara, Nepal</em></p>
             <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+            <h4>Laravel web development</h4>
+            <h5>2023 - 2024</h5>
+            <p><em>Websoft, Pokhara, Nepal</em></p>
             <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
+            <h4>Laravel web development</h4>
             <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <p><em>Websoft, Pokhara, Nepal </em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+              <li>Lead in the design, development, and implementation of the web development, layout, and production communication materials</li>
+              <li>Delegate tasks to the 4 members of the development team and provide counsel on all aspects of the project. </li>
+              <li>Supervise the assessment of all web development materials in order to ensure quality and accuracy of the website</li>
               <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
             </ul>
             </p>
